src/test/ui/associated-consts/associated-const-dead-code.stderr
error: associated constant is never used: `BAR`
  --> $DIR/associated-const-dead-code.rs:6:5
   |
LL |     const BAR: u32 = 1;
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/associated-const-dead-code.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

